ogタグを追加

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,15 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta property="og:title" content="議員SNS">
+    <meta property="og:type" content="website">
+    <meta property="og:url"
+          content="<%= BASE_URL %>">
+    <meta property="og:site_name" content="議員SNS">
+    <meta property="og:description"
+          content="地方自治体議員のSNSを知ろう">
+    <meta property="og:image"
+          content="<%= BASE_URL %>tokyo.jpeg">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
