--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta property="og:title" content="議員SNS">
-    <meta property="og:type" content="website">
+    <meta property="og:type" content="product">
     <meta property="og:url"
           content="<%= BASE_URL %>">
     <meta property="og:site_name" content="議員SNS">
