ogタグのurlとimageの設定値が、正確な値でなかったので修正

--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,11 @@
     <meta property="og:title" content="議員SNS">
     <meta property="og:type" content="product">
     <meta property="og:url"
-          content="<%= BASE_URL %>">
+          content="http://giinsns.com">
     <meta property="og:site_name" content="議員SNS">
     <meta property="og:description"
           content="地方自治体議員のSNSを知ろう">
-    <meta property="og:image"
-          content="<%= BASE_URL %>tokyo.jpeg">
+    <meta property="og:image" content="http://giinsns.com/tokyo.jpeg">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
