--- a/public/index.html
+++ b/public/index.html
@@ -10,8 +10,14 @@
           content="http://giinsns.com">
     <meta property="og:site_name" content="議員SNS">
     <meta property="og:description"
-          content="地方自治体議員のSNSを知ろう">
+          content="地方自治体議員のSNSを知ろう！！">
     <meta property="og:image" content="http://giinsns.com/tokyo.jpeg">
+    <meta name="twitter:image:src" content="http://giinsns.com/tokyo.jpeg">
+    <meta name="twitter:site" content="http://giinsns.com">
+    <meta name="twitter:description " content="地方自治体議員のSNSを知ろう！！">
+    <meta name="twitter:title" content="議員SNS">
+    <meta name="twitter:card" content="summary">
+
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
